--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
 	},
 	"homepage": "https://github.com/kdzwinel/Context",
 	"dependencies": {
-		"grunt": "~0.4.4",
+		"grunt": "~>1.3.0",
 		"grunt-contrib-jshint": "~0.9.2",
 		"grunt-contrib-watch": "~0.6.1",
 		"grunt-contrib-csslint": "~0.2.0",
